Landing screen assignment

--- a/index.html
+++ b/index.html
@@ -75,22 +75,24 @@
 
         <main class="container">
           <!--Main Section with page title, description and background image-->
-          <div class="main">
-            <h1 class="title">Subscription Billing & Revenue Operations</h1>
-            <h1 class="sub-title">For Business Designed for Growth</h1>
-            <h3 class="description">
-              Chargebee gives you the freedom to deploy the right growth
-              strategies, while automating everything else in your
-              order-to-revenue workflow.
-            </h3>
-            <div class="main-buttons">
-              <button class="btn-bgcolor">Get a Consultation</button>
-              <button class="btn-signup">Signup for Free</button>
+          <div class="row">
+            <div class="main col col-md-5">
+              <h1 class="title">Subscription Billing & Revenue Operations</h1>
+              <h1 class="sub-title">For Business Designed for Growth</h1>
+              <h3 class="description">
+                Chargebee gives you the freedom to deploy the right growth
+                strategies, while automating everything else in your
+                order-to-revenue workflow.
+              </h3>
+              <div class="main-buttons">
+                <button class="btn-bgcolor">Get a Consultation</button>
+                <button class="btn-signup">Signup for Free</button>
+              </div>
             </div>
           </div>
 
           <!--Trusted Brands section-->
-          <div class="leading-brands">
+          <div class="leading-brands col-md-4">
             <h3>
               Trusted by leading brands to process over $3Bn in recurring
               revenue.
@@ -268,7 +270,7 @@
                     alt="Subscription Automation"
                   />
                 </div>
-                <div class="selected-description">
+                <div class="selected-description col-sm-4">
                   <h2 class="selected-title">
                     Automate the Order-to-Revenue Lifecycle
                   </h2>
